--- a/package.json
+++ b/package.json
@@ -25,7 +25,8 @@
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
-    "react-router-dom": "^6.22.3"
+    "react-router-dom": "^6.22.3",
+    "react-tooltip": "^5.26.3"
   },
   "devDependencies": {
     "@types/prismjs": "^1.26.3",
