--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
   "dependencies": {
     "@adam.plesnik/tailwindcss-scroll-driven-animations": "^0.2.7",
     "@vercel/analytics": "^1.2.2",
+    "clsx": "^2.1.1",
     "lucide-react": "^0.372.0",
     "prismjs": "^1.29.0",
     "react": "^18.2.0",
